--- a/.github/workflows/main_soal2cc.yml
+++ b/.github/workflows/main_soal2cc.yml
@@ -14,21 +14,25 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: List all files for debugging
+        run: ls -R
 
       - name: Set up Python version
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'  # Menggunakan versi stabil
+          python-version: '3.11'
 
       - name: Create and start virtual environment
         run: |
           python -m venv venv
           source venv/bin/activate
-      
+
       - name: Install dependencies
         run: |
           if [ -f requirements.txt ]; then
@@ -37,8 +41,6 @@ jobs:
             echo "Error: requirements.txt not found!"
             exit 1
           fi
-
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
         run: zip -r release.zip . -x "venv/*"
@@ -56,8 +58,8 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
       - name: Download artifact from build job
@@ -76,6 +78,12 @@ jobs:
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
 
       - name: 'Deploy to Azure Web App'
+        uses: azure/webapps-deploy@v3
+        id: deploy-to-webapp
+        with:
+          app-name: 'soal2CC'
+          slot-name: 'Production'
+
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
